--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,10 @@
 /** Header - Navbar */
 nav {
     padding: 1.5rem;
-    position: fixed;
+    /* position: fixed;
     top: 0%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
     width: 100%;
     display: flex;
     align-items: center;
